Refactor: Organização de arquivos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +18,7 @@
 <body>
     <div>
         <div class="topo">
-            <img src="logo.png" alt="">
+            <img src="https://github.com/jordanrafaell/Cafeteria.github.io/assets/61181764/7ed771db-b39f-48be-b756-be609ff52ee9" alt="">
             <div>
                 <a href="#informacoes">INFORMAÇÕES</a>
                 <a href="#contatos">CONTATOS</a>
